i forgot what i added, so here's your message

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>iOS Version Checker</title>
+    <title>Can I Jailbreak?</title>
     <link rel="stylesheet" href="./assets/styles.css">
     <script src="./assets/jquery-3.6.0.min.js"></script>
     <script src="./assets/index.js"></script>
@@ -42,7 +42,8 @@
             </select>
         </div>
         <p id="status"></p>
-        <p id="notice15" style="display: none;">Note: iOS 15 jailbreaks must be rootless. <br> <a href="./wiki/rootless/">What does this mean?</a></p>
+        <p id="notice15" style="display: none;"><i style="color: #007ACC;" class="fas fa-info-circle"></i> iOS 15
+            jailbreaks must be rootless. <br> <a href="./wiki/rootless/">What does this mean?</a></p>
     </div>
     <div id="second" class="info">
         <div id="vulns" class="vulnerabilities container stuff" style="display: none;">
@@ -98,9 +99,18 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <h1>Links</h1>
+        <h2 style="line-height: 40px;">
+            <a href="wiki">Wiki</a><br>
+            <a href="https://canijailbreak.com/">Can I Jailbreak by IPSW.me</a><br>
+            <a href="https://bludood.com">My Website</a>
+        </h2>
+    </div>
     <br><br><br><br>
     <div class="footer">
-        <span>Made by <a href="https://github.com/BluDood">BluDood</a> | <i class="fab fa-github"></i> <a
+        <span><i style="color: #0064FF;" class="fas fa-user"></i> Made by <a
+                href="https://github.com/BluDood">BluDood</a> | <i class="fab fa-github"></i> <a
                 href="https://github.com/BluDood/CanIJailbreak">GitHub</a></span>
     </div>
 </body>
