--- a/wiki/rootless/index.html
+++ b/wiki/rootless/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>iOS Version Checker</title>
+    <title>Can I Jailbreak? - Wiki:Rootless</title>
     <link rel="stylesheet" href="../../assets/styles.css">
     <script src="../../assets/jquery-3.6.0.min.js"></script>
     <script src="../../assets/index.js"></script>
