--- a/wiki/index.html
+++ b/wiki/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>iOS Version Checker</title>
+    <title>Can I Jailbreak? - Wiki</title>
     <link rel="stylesheet" href="../assets/styles.css">
     <link rel="stylesheet" href="./styles.css">
     <script src="../assets/jquery-3.6.0.min.js"></script>
