--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <meta property="og:title" content="Can I Jailbreak?">
+    <meta property="og:url" content="https://canijailbreak.bludood.com">
+    <meta property="theme-color" content="#232323">
+    <meta property="og:description" content="Check if you can jailbreak your device!">
 </head>
 
 <body onload="Jailbreak(), iOSVersion(), isIOS()">
