--- a/wiki/rootless/index.html
+++ b/wiki/rootless/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Can I Jailbreak? - Wiki:Rootless</title>
     <link rel="stylesheet" href="../../assets/styles.css">
-    <script src="../../assets/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="../styles.css">
     <script src="../../assets/index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -31,6 +31,8 @@
         <span style="line-height: 25px;">For iOS 15, no. We just need new ways to jailbreak, such as rootless jailbreaks
             (not new, but now needed) <br><br>For iOS 16+, we don't know yet. They might implement more checks, they
             might allow jailbreaking at its whole.</span>
+        <br><br>
+        <a href="/"><i class="fas fa-chevron-left"></i> Back to Can I Jailbreak</a>
         <br><br>
         <a href=".."><i class="fas fa-chevron-left"></i> Back to Wiki</a>
     </div><br>
