Small update Fix background size Add loading animation to clean up javascript delay

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 </head>
 
 <body>
+    <div class="loading">
+        <h2>Can I Jailbreak?</h2>
+        <div>
+            <img src="https://bludood.com/bludood.png">
+            <span>Made by BluDood</span>
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 40vh;" width="50px" height="50px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+            <circle cx="50" cy="50" fill="none" stroke="#0064FF" stroke-width="10" r="35" stroke-dasharray="164.93361431346415 56.97787143782138">
+            </circle>
+        </svg>
+    </div>
     <div class="container notios">
         <h1>Visit this website on your iPhone!</h1>
         <p>See if your iOS device can be jailbroken, if there is a vulnerability for it, or suggestions for future jailbreaking!</p>
