Remove unused images, add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="https://canijailbreak.bludood.com">
     <meta property="theme-color" content="#232323">
     <meta property="og:description" content="Check if you can jailbreak your device!">
+    <link rel="icon" type="image/x-icon" href="/assets/img/icon.png">
 </head>
 
 <body>
