Change "Visit on iPhone" to "Visit on iOS device"

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </svg>
     </div>
     <div class="container notios">
-        <h1>Visit this website on your iPhone!</h1>
+        <h1>Visit this website on your iOS device!</h1>
         <p>See if your iOS device can be jailbroken, if there is a vulnerability for it, or suggestions for future jailbreaking!</p>
-        <h3>On an Apple Device? Please "Request Mobile Website".</h3>
+        <h3>On an iOS Device? Please "Request Mobile Website".</h3>
     </div>
     <div class="container device">
         <h1 class="device-version">iOS </h1>
